Always use Unsafe to clean ByteBuffer